feat: support (2FA) authentication
Fix #1

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Lars Willighagen",
   "license": "MIT",
   "dependencies": {
+    "form-data": "^4.0.0",
     "node-fetch": "^2.6.1",
     "parse-link-header": "^2.0.0",
     "yargs": "^17.3.1"
