--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A client for the CDLI REST API",
   "main": "src/index.js",
   "bin": {
-    "cdli": "./cli.js"
+    "cdli": "cli.js"
   },
   "scripts": {
     "lint": "eslint cli.js src/**"
